# pdf-rag-agent

pdf_agent/: README.md  pyproject.toml  requirements.txt
pdf_agent/src/pdf_agent/: crew.py  main.py
pdf_agent/src/pdf_agent/config/: agents.yaml  tasks.yaml
